k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gamedivers-website
          image: ghcr.io/duneslim/gamedivers-website:latest
          ports:
            - containerPort: 80

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "300m"
              memory: "128Mi"

          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /var/run
            - name: cache
              mountPath: /var/cache

      volumes:
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: cache
          emptyDir: {}
