k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamedivers-website
spec:
  type: ClusterIP
  selector:
    app: gamedivers-website
  ports:
    - name: http
      port: 80
      targetPort: 8080
